[tool.poetry]
name = "flask-restful-api"
version = "0.1.0"
description = ""
authors = ["Alexander Lozovoy <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.13.0"
Flask = "^2.0.1"
requests = "^2.26.0"
aiohttp = "^3.7.4"
Flask-RESTful = "^0.3.9"
Flask-JWT = "^0.3.2"
Flask-SQLAlchemy = "^2.5.1"
apispec = "^5.0.0"
marshmallow = "^3.13.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
